ft.completed ngo website

--- a/aboutus.html
+++ b/aboutus.html
@@ -83,6 +83,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+    .Links>a:hover{
+        text-decoration: underline;
+    }
+
         body {
             background-color: rgb(245, 239, 229);
         }
@@ -289,12 +293,12 @@
             <div class="navbar">
                 <div class="logoSpace">
                     <img src="./Imagetouse/logo.webp" alt="LOGO" class="logoImage">
-                    <a href="#">RiseTogether</a>
+                    <a href="/index.html">RiseTogether</a>
                 </div>
                 <div class="Links">
                     <a href="./index.html">Home</a> 
-                    <a href="#">Awards</a> 
-                    <a href="#">Review</a> 
+                    <a href="/collaborate.html">Collab With Us</a> 
+                    <a href="/ourwork.html">Our Work</a> 
                     <a href="./aboutus.html">AboutUs</a> 
                 </div>
                 <div class="leftNavBar">
@@ -450,10 +454,10 @@
         </div>
         <div class="footer2">
             <p>MAIN MENU</p>
-            <a href="/">Home Page</a>
-            <a href="">How we Work</a>
+            <a href="/index.html">Home Page</a>
+            <a href="/ourwork.html">How we Work</a>
             <a href="./aboutus.html">About Us</a>
-            <a href="">Causes</a>
+            <a href="/collaborate.html">Collab</a>
         </div>
         <div class="footer3">
             <p>NONPROFITS</p>
