--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <a href="#">RiseTogether</a>
         </div>
         <div class="Links">
-            <a href="./index.html">Home</a> 
-            <a href="#">Awards</a> 
-            <a href="#">Review</a> 
+            <a href="/index.html">Home</a> 
+            <a href="/collaborate.html">Collab WIth Us</a> 
+            <a href="./ourwork.html">Our Work</a> 
             <a href="./aboutus.html">AboutUs</a> 
         </div>
         <div class="leftNavBar">
@@ -51,7 +51,7 @@
             <p><img src="./Imagetouse/twin.png" alt="" class="twinIcon">Lorem ipsum dolor sit amet.</p>
             <p><img src="./Imagetouse/generous.png" alt="" class="charityIcon">Lorem ipsum dolor sit amet consectetur.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing<br>elit. Ea, deleniti.</p>
-            <button href="#"><a href="/aboutus.html">Learn More</a></button>
+            <button href="/ourwork.html"><a href="/aboutus.html">Learn More</a></button>
         </div>
     </div>
     <div class="facilityBox">
@@ -97,11 +97,10 @@
             <p class="fAdd">Address: Survey No, 124, Paud Rd,<br> Kothrud, Pune, Maharashtra 411038</p>
         </div>
         <div class="footer2">
-            <p>MAIN MENU</p>
-            <a href="/">Home Page</a>
-            <a href="">How we Work</a>
+            <a href="/index.html">Home Page</a>
+            <a href="/ourwork.html">How we Work</a>
             <a href="./aboutus.html">About Us</a>
-            <a href="">Causes</a>
+            <a href="/collaborate.html">Collab</a>
         </div>
         <div class="footer3">
             <p>NONPROFITS</p>
