ft. fixed few bugs

--- a/collaborate.html
+++ b/collaborate.html
@@ -384,7 +384,7 @@
     <footer>
         <div class="footer">
             <div class="footer1">
-                <img src="/Imagetouse/logo.webp" alt="Logo" class="logoImage">
+                <img src="/Imagetouse/logo.jpg" alt="Logo" class="logoImage">
                 <p class="fMotto">We're RiseTogether, passionate and<br> committed to helping non-profits<br>learn and
                     grow</p>
                 <p class="fAdd">Address: Survey No, 124, Paud Rd,<br> Kothrud, Pune, Maharashtra 411038</p>
