--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class="heroSection">
         <div class="leftHeroSection">
-            <div ><img src="./Imagetouse/grid1.avif" alt="" class="grid1"></div>
+            <div ><img src="/Imagetouse/grid1.jpg" alt="" class="grid1"></div>
             <div ><img src="./Imagetouse/grid2.jpeg" alt="" class="grid2"></div>
             <div ><img src="./Imagetouse/grid3.jpeg" alt="" class="grid3"></div>
             <div ><img src="./Imagetouse/grid4.jpeg" alt="" class="grid4"></div>
@@ -51,7 +51,7 @@
             <p><img src="./Imagetouse/twin.png" alt="" class="twinIcon">Lorem ipsum dolor sit amet.</p>
             <p><img src="./Imagetouse/generous.png" alt="" class="charityIcon">Lorem ipsum dolor sit amet consectetur.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing<br>elit. Ea, deleniti.</p>
-            <button href="/ourwork.html"><a href="/aboutus.html">Learn More</a></button>
+            <button><a href="/aboutus.html">Learn More</a></button>
         </div>
     </div>
     <div class="facilityBox">
@@ -70,7 +70,7 @@
             <p>+ Who started RiseTogether?</p>
             <p>+ What does RiseTogether do?</p> 
             <h2>A relationship where we care</h2>
-            <button><a href="./aboutus.html">Learn how we help</a></button>
+            <button><a href="/ourwork.html">Learn how we help</a></button>
         </div>
     </div>
    
@@ -92,7 +92,7 @@
     </div>
     <div class="footer">
         <div class="footer1">
-            <img src="/Imagetouse/logo.webp" alt="Logo" class="logoImage">
+            <img src="/Imagetouse/logo.jpg" alt="Logo" class="logoImage">
             <p class="fMotto">We're RiseTogether, passionate and<br> committed to helping non-profits<br>learn and grow</p>
             <p class="fAdd">Address: Survey No, 124, Paud Rd,<br> Kothrud, Pune, Maharashtra 411038</p>
         </div>
