ft. updated payment gateway

--- a/ourwork.html
+++ b/ourwork.html
@@ -339,9 +339,9 @@
         </div>
         <div class="footer3">
             <p>NONPROFITS</p>
-            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ">Nonprofit Resources</a>
-            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ">Donation Online</a>
-            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ">Donation's Details</a>
+            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ" target="_blank">Nonprofit Resources</a>
+            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ" target="_blank">Donation Online</a>
+            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ" target="_blank">Donation's Details</a>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Volunteering</a>
         </div>
         <div class="footer4">
