--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="leftNavBar">
             <div class="contactNumber">
                 <img src="./Imagetouse/phone-call.png" alt="" class="callIcon"><p>8888 7777 99</p>
-                <button type="submit"><a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ">Donation</a></button>
+                <button type="submit"><a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ" target="_blank">Donation</a></button>
             </div>
         </div>
     </div>
@@ -33,7 +33,7 @@
             <img src="./Imagetouse//smiling-children-traditional-clothing-celebrate-festival-generated-by-ai.jpg" alt ="" class="heroImg">
             <p>We do it for people in need</p>
             <h1>The power<br>to choose in a<br>child's hands<br>
-                <button type="submit" class="donationButton"><a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ">Donate Now</a></button>
+                <button type="submit" class="donationButton"><a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ" target="_blank">Donate Now</a></button>
             </h1>
         </div>
     </div>
@@ -104,9 +104,9 @@
         </div>
         <div class="footer3">
             <p>NONPROFITS</p>
-            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ">Nonprofit Resources</a>
-            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ">Donation Online</a>
-            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ">Donation's Details</a>
+            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ" target="_blank">Nonprofit Resources</a>
+            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ" target="_blank">Donation Online</a>
+            <a href="https://donate.stripe.com/test_cN2g2X7gPdJn1wcbIJ" target="_blank">Donation's Details</a>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Volunteering</a>
         </div>
         <div class="footer4">
